--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 14
-          registry-url: https://npm.pkg.github.com/CareCloud/the-graph
+          registry-url: https://npm.pkg.github.com
       - run: npm install the-graph
       - run: npm publish 
         env:
