--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -35,5 +35,5 @@ jobs:
       - run: npm install the-graph
       - run: npm publish 
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_BUILD_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN}}
